--- a/platform_code/assessment/templates/assessment/section-feedback.html
+++ b/platform_code/assessment/templates/assessment/section-feedback.html
@@ -28,8 +28,8 @@
 
         </div>
         <div class="modal-footer">
-            <button class="btn btn-primary same-size-250" type="button" name="button_feedback"
-                    onclick="feedback({{section.id}}, 'section')" style="margin: auto" >{% trans 'Submit' %}</button>
+            <button class="btn btn-primary same-size-250 margin-auto" type="button" name="button_feedback"
+                    onclick="feedback({{section.id}}, 'section')" >{% trans 'Submit' %}</button>
         </div>
           <div id="confirmation_feedback_section{{section.id}}"></div>
     </form>
