--- a/platform_code/assessment/templates/assessment/creation-evaluation-modal.html
+++ b/platform_code/assessment/templates/assessment/creation-evaluation-modal.html
@@ -7,7 +7,7 @@
             <h4 class="modal-title absolute-position" id="myModalLabel">{% trans "Create a new evaluation" %}</h4>
             <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
-        <div class="modal-body create-form">
+        <div class="modal-body create-form width-50">
             <div class="column">
             {% csrf_token %}
             {% for field in form %}
