--- a/platform_code/assessment/templates/assessment/edit-evaluation.html
+++ b/platform_code/assessment/templates/assessment/edit-evaluation.html
@@ -10,7 +10,7 @@
         <h4 class="modal-title" >{% trans "Do you want to change the name of your evaluation?" %} </h4>
         <button type="button" class="close" data-dismiss="modal">&times;</button>
       </div>
-        <div class="modal-body create-form">
+        <div class="modal-body create-form width-50">
             <div class="column">
             {% csrf_token %}
             {% with eval_form=evaluation_form_dic|get_item_converted_str:evaluation.id %}
